infer/tests/codetoanalyze/cpp/errors/namespace/global_variable.cpp
../../frontend/namespace/global_variable.cpp